# edcurate

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  biome.json  commitlint.config.cjs  mise.toml
apps/api/: .env.example  .gitignore  Dockerfile  docker-compose.infra.yml  fix_migration.py  mise.toml  openapi.json  pyproject.toml  ruff.toml  seed_test_collections.py  vercel.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 156885046efb_add_cloned_from_id_to_library_.py  230b7e291e5c_add_resource_evaluations_table.py  30d7f3982ea9_add_resource_evaluations_table.py  465be38b13e8_merge_multiple_heads.py  5899875c22d2_add_librarycollection_tfidf.py  8559518b168b_merge_curriculum_and_saved_resources_.py  a1b2c3d4e5f6_add_classroom_presets.py  a2b3c4d5e6f7_add_description_to_library_collections.py  afb2e6fe8ebf_add_search_query_to_saved_resources.py  b2c3d4e5f6a7_add_password_hash.py  bcddadb2147a_add_saved_resources_table.py  c27674d0b6c1_add_generated_artifacts.py  c3d4e5f6a7b8_remove_topic_from_presets.py  d4e5f6a7b8c9_add_curriculum_entries.py  e6f7a8b9c0d1_merge_library_collections_and_generated_artifacts.py  e7f8a9b0c1d2_add_korea_curriculum.py  fcaa9d268d97_initial_schema.py
apps/api/scripts/: gen_openapi.py  migrate_collections.py
apps/api/src/: main.py
apps/api/src/agents/: __init__.py  base.py  schemas.py
apps/api/src/agents/evaluation/: __init__.py  adversarial_agent.py  adversarial_retrieval.py  evaluation_agent.py  final_judge.py  reconciler.py  risk_scanner.py  triage_agent.py
apps/api/src/agents/search/: search_query_agent.py
apps/api/src/auth/: router.py
apps/api/src/common/models/: __init__.py  base.py  pagination.py
apps/api/src/curriculum/: model.py  router.py  schemas.py  service.py
apps/api/src/discovery/: router.py  schemas.py  service.py
apps/api/src/discovery/providers/: base.py  ddgs.py  (+2 more)
apps/api/src/evaluation/: __init__.py  adversarial_agent.py  adversarial_retrieval.py  agent.py  reconciler.py  schemas.py
apps/api/src/evaluations/: __init__.py  model.py  service.py
apps/api/src/lib/: auth.py  config.py  database.py  dependencies.py  logging.py  rate_limit.py  telemetry.py
apps/api/src/localizer/: model.py  notebooklm_client.py  router.py  schemas.py  service.py
apps/api/src/presets/: model.py  router.py  schemas.py  service.py
apps/api/src/rag/: __init__.py  chunker.py  embedder.py  fetcher.py  readability.py  weaviate_store.py
apps/api/src/saved_resources/: __init__.py  model.py  router.py  schemas.py  service.py
apps/api/src/users/: model.py  router.py
apps/api/tests/: conftest.py  test_alembic_history.py  test_auth_verification.py  test_candidate_selection.py  test_config.py  test_health.py  test_openalex_provider.py  test_rag_fetcher.py  test_rate_limit.py  test_saved_resources_service.py  test_sort_by_relevance.py
apps/worker/: Dockerfile  mise.toml  pyproject.toml  ruff.toml
apps/worker/src/: main.py
apps/worker/src/lib/: config.py  retry.py
apps/worker/src/routers/: health.py  tasks.py
(+727 files in other folders)
